height of home page fixed on iphone 6

--- a/src/app/home/landing-page/landing-page.component.styl
+++ b/src/app/home/landing-page/landing-page.component.styl
@@ -2,7 +2,7 @@
 @import "../../common/styles/custom-buttons.styl"
 
 .root
-    height 1062px
+    height 100vh
     background-repeat no-repeat
     background-position center center
 
